fixed z-index in kaufman section

--- a/styles/style.css
+++ b/styles/style.css
@@ -242,6 +242,7 @@
   padding: 90px 0;
   position: relative;
   overflow: hidden;
+  z-index: 1;
 }
 
 .kaufman__triangle {
@@ -249,7 +250,7 @@
   position: absolute;
   top: 0;
   right: -210px;
-  z-index: 1;
+  z-index: -1;
   width: 877px;
   height: 877px;
 }
@@ -257,7 +258,6 @@
 /* Модификаторы для таблицы на темном фоне */
 .section-title_theme_dark {
   color: white;
-  z-index: 2;
   font-size: 60px;
   font-weight: 600;
   line-height: 1.15;
@@ -265,35 +265,28 @@
 
 .section-subtitle_theme_dark {
   color: white;
-  z-index: 2;
   font-size: 24px;
   font-weight: normal;
   line-height: 34px;
 }
 
 .table_theme_dark {
-  z-index: 2;
+  color: white;
 }
 
 .table__cell_theme_dark {
   width: 200px;
-  color: white;
   margin-right: 0;
   margin-top: 80px;
-  z-index: 2;
 }
 
 .table__heading_theme_dark {
-  color: white;
-  z-index: 2;
   font-size: 24px;
   font-weight: 600;
   line-height: 1.15;
 }
 
 .table__text_theme_dark {
-  color: white;
-  z-index: 2;
   font-size: 18px;
   font-weight: normal;
   line-height: 1.2;
